# SAIL

./: .gitignore  README.md  pyproject.toml
dataset_process/: XYcut.py  postjson.py  postprocessing_sroie.py  preprocess_cord.py  preprocess_cord_cut_gt.py  preprocess_funsd.py  preprocess_funsd_cut_gt.py  preprocess_sroie_cut.py
eval/: eval_cord.py  eval_funsd.py  eval_sroie.py
method/: SROIEtest.py  cordlabel.txt  cordtest.py  funsdlabel.txt  funsdtest.py
preprocess/: imageprocess.py  textprocess.py
